--- a/application/modules/admin/views/scripts/cartao/visualisa-vacina.phtml
+++ b/application/modules/admin/views/scripts/cartao/visualisa-vacina.phtml
@@ -263,7 +263,7 @@
                                     <option value="">--</option>
                                     <option value="nome_vacina">Nome da Vacina</option>
                                     <option value="dt_aplicacao">Data da Aplicação</option>
-                                    <option value="lote_vacina">Lote da Vacina</option>
+                                    <option value="lote">Lote da Vacina</option>
                                     <option value="">Todos</option>
                                 </select>
 
@@ -511,7 +511,7 @@
                                     <option value="">--</option>
                                     <option value="nome_vacina">Nome da Vacina</option>
                                     <option value="dt_aplicacao">Data da Aplicação</option>
-                                    <option value="lote_vacina">Lote da Vacina</option>
+                                    <option value="lote">Lote da Vacina</option>
                                     <option value="">Todos</option>
                                 </select>
 
@@ -760,7 +760,7 @@
                                     <option value="">--</option>
                                     <option value="nome_vacina">Nome da Vacina</option>
                                     <option value="dt_aplicacao">Data da Aplicação</option>
-                                    <option value="lote_vacina">Lote da Vacina</option>
+                                    <option value="lote">Lote da Vacina</option>
                                     <option value="">Todos</option>
                                 </select>
 
@@ -994,7 +994,7 @@
                                     <option value="">--</option>
                                     <option value="nome_vacina">Nome da Vacina</option>
                                     <option value="dt_aplicacao">Data da Aplicação</option>
-                                    <option value="lote_vacina">Lote da Vacina</option>
+                                    <option value="lote">Lote da Vacina</option>
                                     <option value="">Todos</option>
                                 </select>
 
@@ -1003,7 +1003,6 @@
                                     <button type="submit" class="btn btn-info"><i class="icon-search icon-white"></i>&nbsp;Pesquisar</button>
 
                                     <a href="/admin/cartao/ver-cartao/tipo/4/cod_pessoa/<?php echo $this->paciente->cod_pessoa ?>" title="Visualisar Cartão de Vacinas" class="btn btn-info btn btn-default"><i class="icon-eye-open icon-white"></i></a>
-
                                 </div>
                             </form>
                             <br><br>
