--- a/application/modules/admin/views/scripts/pessoa/cadastro-funcionario.phtml
+++ b/application/modules/admin/views/scripts/pessoa/cadastro-funcionario.phtml
@@ -202,13 +202,13 @@
                             <div class="control-group">
                                 <label for="inputEmail" class="control-label"><b>*</b> Telefone residêncial:</label>
                                 <div class="controls">
-                                    <?php echo $this->form->Telefone->num_tel1 ?>
+                                    <?php echo $this->form->telefone_residencial ?>
                                 </div>
                             </div>
                             <div class="control-group">
                                 <label for="inputEmail" class="control-label"><b>*</b> Telefone celular:</label>
                                 <div class="controls">
-                                    <?php echo $this->form->Telefone->num_tel2 ?>
+                                    <?php echo $this->form->telefone_celular ?>
                                 </div>
                             </div>
                             <div class="control-group">
