--- a/application/modules/admin/views/scripts/pessoa/editar-funcionario.phtml
+++ b/application/modules/admin/views/scripts/pessoa/editar-funcionario.phtml
@@ -9,13 +9,7 @@
 
 <fieldset>
     <legend>Alterar Funcionário</legend>
-    <?php
-    if ($this->mensagem):
-        ?>
-        <div class="alert <?php echo $this->mensagem['type'] ?>"><?php echo $this->mensagem['mensagem'] ?></div>
-        <?php
-    endif;
-    ?>
+    <?php echo $this->flashMessenger() ?>
 
     <div style="margin-bottom: 18px;" class="tabbable">
         <ul class="nav nav-tabs">
@@ -216,19 +210,20 @@
                             <div class="control-group">
                                 <label for="inputEmail" class="control-label">Telefone residêncial:</label>
                                 <div class="controls">
-                                    <?php echo $this->form->Telefone->num_tel1 ?>
+                                    <?php echo $this->form->telefone_residencial ?>
                                 </div>
                             </div>
                             <div class="control-group">
                                 <label for="inputEmail" class="control-label">Telefone celular:</label>
                                 <div class="controls">
-                                    <?php echo $this->form->Telefone->num_tel2 ?>
+                                    <?php echo $this->form->telefone_celular ?>
                                 </div>
                             </div>
                             <div class="control-group">
                                 <label for="inputEmail" class="control-label">E-mail:</label>
                                 <div class="controls">
-                                    <?php echo $this->form->email ?>
+                                    <?php //echo $this->form->email ?>
+                                    <input id="email" class="input-xlarge" type="email" name="email" value="">
                                 </div>
                             </div>
                             <div class="control-group">
