Um monte de alteração.

--- a/application/modules/admin/views/scripts/pessoa/cadastro-paciente.phtml
+++ b/application/modules/admin/views/scripts/pessoa/cadastro-paciente.phtml
@@ -180,7 +180,7 @@
                                 </div>
                             </div>
                             <div class="control-group">
-                                <label for="inputEmail" class="control-label">Codigo da Unidade:</label>
+                                <label for="inputEmail" class="control-label">Unidade de Saúde:</label>
                                 <div class="controls">
                                     <?php echo $this->form->cod_un_saude ?>
                                 </div>
