--- a/application/modules/admin/views/scripts/vacina/cadastro-vacina.phtml
+++ b/application/modules/admin/views/scripts/vacina/cadastro-vacina.phtml
@@ -26,7 +26,7 @@
                             <div class="control-group">
                                 <label for="inputEmail" class="control-label">Fabricante:</label>
                                 <div class="controls">
-                                    <?php echo $this->form->Vacina->Fabricante->nome_fabric ?>
+                                    <?php echo $this->form->Vacina->cod_fabric ?>
                                 </div>
                             </div>
 
