--- a/application/modules/admin/views/scripts/perfil/editar.phtml
+++ b/application/modules/admin/views/scripts/perfil/editar.phtml
@@ -1,13 +1,7 @@
 <script type="text/javascript" src="/admin/js/pessoa.js"></script>
 <fieldset>
     <legend>Alterar Perfil</legend>
-    <?php
-    if ($this->mensagem):
-        ?>
-        <div class="alert <?php echo $this->mensagem['type'] ?>"><?php echo $this->mensagem['mensagem'] ?></div>
-        <?php
-    endif;
-    ?>
+    <?php echo $this->flashMessenger() ?>
 
     <div style="margin-bottom: 18px;" class="tabbable">
         <ul class="nav nav-tabs">
@@ -35,13 +29,13 @@
                                 <div class="control-group">
                                     <label for="inputEmail" class="control-label">Telefone Celular:</label>
                                     <div class="controls">
-                                        <?php echo $this->form->Telefone->num_tel1 ?>
+                                        <?php echo $this->form->telefone_celular ?>
                                     </div>
                                 </div>
                                 <div class="control-group">
                                     <label for="inputEmail" class="control-label">Telefone Residencial:</label>
                                     <div class="controls">
-                                        <?php echo $this->form->Telefone->num_tel2 ?>
+                                        <?php echo $this->form->telefone_residencial ?>
                                     </div>
                                 </div>
                                 <div class="control-group">
