--- a/application/modules/admin/views/scripts/vacina/alterar-vacina.phtml
+++ b/application/modules/admin/views/scripts/vacina/alterar-vacina.phtml
@@ -34,10 +34,9 @@
                             <div class="control-group">
                                 <label for="inputEmail" class="control-label">Fabricante:</label>
                                 <div class="controls">
-                                    <?php echo $this->form->Vacina->Fabricante->nome_fabric ?>
+                                    <?php echo $this->form->Vacina->cod_fabric ?>
                                 </div>
                             </div>
-
                         </div>
                         <div class="span6">
                             <div class="control-group">
