ALTERAÇÃO NO CARTÃO DE VACINAS

--- a/application/modules/admin/layout/layout.phtml
+++ b/application/modules/admin/layout/layout.phtml
@@ -429,8 +429,8 @@
                     <!-- content -->
                     <div class="content">
                         <!-- content-header -->
-                        <div class="content-header">
-                            <ul class="content-header-action pull-right">
+                       <div class="content-header">
+                     <!--       <ul class="content-header-action pull-right">
                                 <li>
                                     <a href="#">
                                         <span data-chart="peity-bar" data-height="32" data-colours='["#00A600", "#00A600"]'>5,3,9,6,5,9,7,3,5,2</span>
@@ -451,9 +451,9 @@
                                         <div class="action-text color-red">4367 <span class="helper-font-small color-silver-dark">Fale Conosco</span></div>
                                     </a>
                                 </li>
-                            </ul>
+                            </ul>  -->
                             <h2><i class="icon-cog"></i>&nbsp;</i>Painel Administrativo</h2>
-                        </div><!-- /content-header -->
+                        </div><!-- /content-header --> 
 
 
 
