--- a/application/modules/site/views/scripts/index/index.phtml
+++ b/application/modules/site/views/scripts/index/index.phtml
@@ -1,13 +1,13 @@
 <div style="clear:both;"></div>
 <div id="newsSlider">
     <div id="banner_div"></div>
-    <script type="text/javascript" src="/assets/js/images/jquery.js"></script>					<!-- Transiçao da imagem -->
-    <script type="text/javascript" src="/assets/js/images/jquery.flash.js"></script>				<!-- Transiçao da imagem -->
-    <script type="text/javascript" src="/assets/js/images/jquery.dd.js"></script>					<!-- Transiçao da imagem -->
-    <script type="text/javascript" src="/assets/js/images/jquery.lightbox.js"></script> 				<!-- Transiçao da imagem -->
-    <script type="text/javascript" src="/assets/js/images/cycleFullTransitions2.js"></script>			<!-- Transiçao da imagem -->
+    <script type="text/javascript" src="/assets/js/jquery.js"></script>					<!-- Transiçao da imagem -->
+    <script type="text/javascript" src="/assets/js/jquery.flash.js"></script>				<!-- Transiçao da imagem -->
+    <script type="text/javascript" src="/assets/js/jquery.dd.js"></script>					<!-- Transiçao da imagem -->
+    <script type="text/javascript" src="/assets/js/jquery.lightbox.js"></script> 				<!-- Transiçao da imagem -->
+    <script type="text/javascript" src="/assets/js/cycleFullTransitions2.js"></script>			<!-- Transiçao da imagem -->
     <link href='/assets/css/imagem.css' rel="stylesheet" type="text/css" />					<!-- Folha de estilo principal -->
-    <script type="text/javascript" src="js/images/cookies.js"></script>					<!-- Cookies -->
+    <script type="text/javascript" src="/assets/js/cookies.js"></script>					<!-- Cookies -->
 
     <div id="teaser">
 
