Alteração de correção no banner

--- a/application/modules/site/views/scripts/index/index.phtml
+++ b/application/modules/site/views/scripts/index/index.phtml
@@ -22,8 +22,8 @@
             var heavyImage = new Image();
             var imagemL = Array("", "", "", ""); //Link das imagens caso necessario
             //var imagemB = Array("img/banner/st_001.jpg","img/banner/st_002.jpg","img/banner/st_003.jpg","img/banner/st_004.jpg"); //imagems
-            var imagemB = Array("/banners/imagem/f9c15dec7cfbccda19c6087d098a831a_grande.jpg ", "/banners/imagem/3c2010fb7ae8d894b6b0ed2c6c0091f7_grande.jpg ", "/banners/imagem/ec3ade6953aad31f07fb02cc0654c4f0_grande.jpg ", "/banners/imagem/aa2d60491211f94498f7c7b20ca12801_grande.jpg "); //imagems
-            var fundos = Array("/banners/imagem/f9c15dec7cfbccda19c6087d098a831a_grande.jpg ", "/banners/imagem/3c2010fb7ae8d894b6b0ed2c6c0091f7_grande.jpg ", "/banners/imagem/ec3ade6953aad31f07fb02cc0654c4f0_grande.jpg ", "/banners/imagem/aa2d60491211f94498f7c7b20ca12801_grande.jpg "); //fundos
+            var imagemB = Array("/banners/fotoban1_grande.jpg", "/banners/fotoban2_grande.jpg", "/banners/fotoban3_grande.jpg", "/banners/fotoban4_grande.jpg"); //imagems
+            var fundos = Array("/banners/fotoban1_grande.jpg ", "/banners/fotoban3_grande.jpg ", "/banners/fotoban3_grande.jpg", "/banners/fotoban4_grande.jpg"); //fundos
             var coresFnd = Array("#CDCDCD", "#182138", "#7DC4E8", "#CDCDCD"); //css das
             $(document).ready(function() {
                 var w = width + 'px';
@@ -142,7 +142,8 @@
 
         <div id="frameBanners">
             <ul>
-                <li><img id="imgBan" src="administrador/pag/banner/imagem/fotoban3_grande.jpg" alt="" title="" style="display: inline-block;">
+                <li><img id="imgBan" src="/banners/fotoban1_grande.jpg" alt="" title="" style="display: inline-block;">
+                <li><img id="imgBan" src="/banners/fotoban1_grande.jpg" alt="" title="" style="display: none;">
             </ul>
         </div>
 
