--- a/application/modules/site/views/scripts/index/index.phtml
+++ b/application/modules/site/views/scripts/index/index.phtml
@@ -22,8 +22,8 @@
             var heavyImage = new Image();
             var imagemL = Array("", "", "", ""); //Link das imagens caso necessario
             //var imagemB = Array("img/banner/st_001.jpg","img/banner/st_002.jpg","img/banner/st_003.jpg","img/banner/st_004.jpg"); //imagems
-            var imagemB = Array("/banners/fotoban1_grande.jpg", "/banners/fotoban2_grande.jpg", "/banners/fotoban3_grande.jpg", "/banners/fotoban4_grande.jpg"); //imagems
-            var fundos = Array("/banners/fotoban1_grande.jpg ", "/banners/fotoban3_grande.jpg ", "/banners/fotoban3_grande.jpg", "/banners/fotoban4_grande.jpg"); //fundos
+            var imagemB = Array("/banners/fotoban2_grande.jpg", "/banners/fotoban3_grande.jpg", "/banners/fotoban4_grande.jpg"); //imagems
+            var fundos = Array("/banners/fotoban3_grande.jpg ", "/banners/fotoban3_grande.jpg", "/banners/fotoban4_grande.jpg"); //fundos
             var coresFnd = Array("#CDCDCD", "#182138", "#7DC4E8", "#CDCDCD"); //css das
             $(document).ready(function() {
                 var w = width + 'px';
@@ -143,7 +143,6 @@
         <div id="frameBanners">
             <ul>
                 <li><img id="imgBan" src="/banners/fotoban1_grande.jpg" alt="" title="" style="display: inline-block;">
-                <li><img id="imgBan" src="/banners/fotoban1_grande.jpg" alt="" title="" style="display: none;">
             </ul>
         </div>
 
