Um monte de alteração no site.

--- a/application/modules/site/layout/layout.phtml
+++ b/application/modules/site/layout/layout.phtml
@@ -31,12 +31,17 @@
         <script src="/assets/js/commons.js"></script> <!-- MENUS SUPERIORES -->  
         <script src="/assets/js/jquery.idTabs.js"></script> <!--  JPEG NO IE6 -->    
         <script src="/assets/js/swfobject.js"></script> <!--  Gera HTML/XHTML valido   -->   
+        <script src="/assets/js/bootstrap.js"></script> <!--  Gera HTML/XHTML valido   -->   
+        <script src="/assets/js/bootstrap.min.js"></script> <!--  Gera HTML/XHTML valido   -->   
         <!-- Fim JQuerys  -->
         <!-- Fim JQuerys  -->
 
         <!-- Adição de folhas de estilos  -->        
         <link href="/assets/css/stylesheet.css" rel="stylesheet" type="text/css" media="screen" />
         <link href="/assets/css/inicio.css" rel="stylesheet" type="text/css" media="screen" />
+        <link href="/assets/css/bootstrap.css" rel="stylesheet" type="text/css" media="screen" />
+        <link href="/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="screen" />
+        <link href="/assets/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css" media="screen" />
 
         <!--[if lt IE 9]>
         <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -101,12 +106,12 @@
                 <footer><div class="top"></div>
 
                     <div class="box" style="border:none">
-                        <h1>INSTITUCIONAL</h1>
+                        <h5>INSTITUCIONAL</h5>
                         <p><a href="/index/institucional">A Empresa </a></p>
                     </div>
 
                     <div class="box" style="width:120px;">
-                        <h1>SERVIÇOS</h1>
+                        <h5>SERVIÇOS</h5>
                         <p><a href="/index/consultar-vacinas">Consultar Vacinas </a></p>
                         <p><a href="/index/consultar-calendario">Consultar Calendário</a></p>
                         <p><a href="/index/centro-saude">Consultar Centros de Saúde</a></p>
@@ -114,18 +119,18 @@
                     </div>
 
                     <div class="box" style="width:120px;">
-                        <h1>Utilidades</h1>
+                        <h5>Utilidades</h5>
                         <p><a href="/index/duvidas">Dúvidas Frequentes</a></p>
                         <p><a href="/index/links-uteis">Links Úteis</a></p>
                     </div>
 
                     <div class="box" style="width:120px;">
-                        <h1>Campanhas</h1>
+                        <h5>Campanhas</h5>
                         <p><a href="/index/campanhas">Campanhas</a></p>
                     </div>
 
                     <div class="box" style="width:120px;">
-                        <h1>CONTATO</h1>
+                        <h5>CONTATO</h5>
                         <p><a href="/index/fale-conosco">Fale Conosco</a></p>
                     </div>
                 </footer>
